新增一些遊戲資料，還有一個失敗的執行檔

--- a/final_project/export_presets.cfg
+++ b/final_project/export_presets.cfg
@@ -9,7 +9,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path=""
+export_path="../鬼火獨自升級.exe"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
@@ -34,14 +34,14 @@ codesign/digest_algorithm=1
 codesign/description=""
 codesign/custom_options=PackedStringArray()
 application/modify_resources=true
-application/icon=""
+application/icon="uid://cahytsmaq8hbu"
 application/console_wrapper_icon=""
 application/icon_interpolation=4
 application/file_version=""
 application/product_version=""
 application/company_name=""
-application/product_name=""
-application/file_description=""
+application/product_name="鬼火獨自升級"
+application/file_description="一款運用資料庫的地城冒險"
 application/copyright=""
 application/trademarks=""
 application/export_angle=0
